# StripCppComments

./: CMakeLists.txt  CommentStripper.cpp  CommentStripper.h  README.md  main.cpp  paper_review.txt  tests.cpp
